#2 fix onDelete to accomodate callback and remove promise

--- a/src/plugins/file-upload/theme/fileupload.css
+++ b/src/plugins/file-upload/theme/fileupload.css
@@ -1,3 +1,7 @@
+.ck.ck-powered-by {
+    display: none;
+}
+
 .skn-file-upload-placeholder {
     --background: #f8f8f8;
     --border-color: #e6e6e6;
